# WordFocus

./: .gitignore  .kilotimelimit  LICENSE  README.md  build.ps1  index.html  package.json
.github/workflows/: build.yml
scripts/: build-release.mjs
src/: App.css  App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Controls.tsx  FilePicker.tsx  NavButtons.tsx  SettingsPanel.tsx  WordDisplay.tsx
src/hooks/: useAutoAdvance.ts  useSettings.ts
