[package]
name = "word-focus"
version = "0.1.0"
edition = "2021"

[lib]
name = "word_focus_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
epub = "1"
pdf-extract = "0.7"
windows-sys = { version = "0.59", features = ["Win32_System_Console"] }
